--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cryptofolio",
   "version": "1.0.0",
-  "description": "",
+  "description": "cryptocurrency market place",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,7 +22,6 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
-    "moment": "^2.25.3",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
