--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.8"
+  },
+  "devDependencies": {
+    "eslint": "^7.0.0"
   }
 }
