--- a/package.json
+++ b/package.json
@@ -27,7 +27,5 @@
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.8"
   },
-  "devDependencies": {
-    "eslint": "^7.0.0"
-  }
+  "devDependencies": {}
 }
