--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cryptofolio",
   "version": "1.0.0",
-  "description": "",
+  "description": "cryptocurrency market place",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,5 +26,6 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.8"
-  }
+  },
+  "devDependencies": {}
 }
