--- a/config/config.json
+++ b/config/config.json
@@ -16,7 +16,7 @@
     "operatorsAliases": false
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "use_env_variable": "CLEARDB_DATABASE_URL",
     "dialect": "mysql"
   }
 }
